--- a/src/App.css
+++ b/src/App.css
@@ -327,7 +327,7 @@ nav {
 }
 
 .work-section-info {
-  width: 290px;
+  width: 280px;
   min-height: 350px;
   background-color: white;
   padding: 1rem 2rem;
@@ -338,7 +338,7 @@ nav {
   text-align: center;
   border-radius: 1rem;
   color: #505050;
-  margin: 1rem 2rem;
+  margin: 1rem;
 }
 
 .work-section-info h2 {
